@@ -1,13 +1,14 @@
 package game.controllers;
 
-import ai.communication.DataEmiter;
+import ai.communication.DataEmitter;
 import ai.communication.DataReceiver;
 import ai.communication.NodeInput;
 import ai.communication.State;
+import game.MainGameStarter;
 import game.models.*;
 import javafx.animation.AnimationTimer;
-import javafx.application.Platform;
 import javafx.fxml.FXML;
+import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
 import javafx.scene.control.Label;
 import javafx.scene.image.Image;
@@ -15,31 +16,40 @@ import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyCode;
 import javafx.scene.layout.Pane;
 import javafx.scene.text.Font;
+import javafx.stage.FileChooser;
+
 
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
+import java.nio.file.Files;
 import java.util.*;
 import java.util.List;
+import java.util.concurrent.LinkedBlockingDeque;
 import java.util.concurrent.ScheduledThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 
 public class GameController implements Initializable, Runnable{
 //TODO Ukrywanie przeszkod po lewej stronie, zwiekszenie predkosci, mozliwosc pojawienia sie wielu przeszkod ( max 3 ) w jednym widoku,
+    // tylko  2 przeszkody mogą byc takie same jak w jest w skrypcie js
     @FXML
     private Pane gamePane;
     private Score score;
     private Dinosaur player;
-    private List<Obstacle> obstacle = new ArrayList<>();
+    //kolejka lepsza
+    private LinkedBlockingDeque<Obstacle> obstacles;
     private Label endGame;
-    private  AnimationTimer timer;
+    private AnimationTimer timer;
+
+    private  File file = null;
     private Random random = new Random();
     private double currentSpeed = 6;
     private DataReceiver dataReceiver = new DataReceiver();
-    private DataEmiter dataEmiter = new DataEmiter(dataReceiver);
+    private DataEmitter dataEmitter = new DataEmitter(dataReceiver);
     private ScheduledThreadPoolExecutor executorService = new ScheduledThreadPoolExecutor(2);
+    // jak bede mial czas to  zrobie to  bez tych wszystkich list
     private List<List> neuronTrainingData = new ArrayList<>();
     private List<Double> distanceToNextObstacle = new ArrayList<>();
     private List<Double> heightOfObstacle = new ArrayList<>();
@@ -50,54 +60,21 @@ public class GameController implements Initializable, Runnable{
     private List<State> state = new ArrayList<>();
     private int iterator=0;
     private List<Cloud> clouds = new ArrayList<>();
-    private Font font;
+    private Font font = Font.loadFont(this.getClass().getResourceAsStream("/font/PressStart2P-Regular.ttf"), 28.0);
     private ImageView replayImageView;
     private Image replayImage = new Image(GameController.class.getResourceAsStream("/drawable/restartButton.png")
             ,36.0,32.0,true,false);
-    private Thread ioThread = new Thread(() ->{
-        while (true) {
-    if(!dataReceiver.isEmpty()) {
-        NodeInput nodeInput = dataReceiver.getData();
-            System.out.println(nodeInput.getDistanceToNextObstacle() +" "+ nodeInput.getHeightOfObstacle() + " "+
-            nodeInput.getWidthOfObstacle() + " " + nodeInput.getPlayerYPosition() + " " +
-            nodeInput.getVelocity() + " " +nodeInput.getPterodactylHeight() + nodeInput.getState() );
+    Label menuLabel;
+    FileWriter  csvWriter = null;
+  //  private Image backToMenuImage = new Image(GameController.class.getResourceAsStream("/drawable/restartButton.png")
+      //      ,36.0,32.0,true,false);
 
-             distanceToNextObstacle.add(nodeInput.getDistanceToNextObstacle());
-             heightOfObstacle.add(nodeInput.getHeightOfObstacle());
-             widthOfObstacle.add(nodeInput.getWidthOfObstacle());
-             playerYPosition.add(nodeInput.getPlayerYPosition());
-             pterodactylHeight.add(nodeInput.getPterodactylHeight());
-             velocity.add(nodeInput.getVelocity());
-             state.add(nodeInput.getState());
-             if(iterator%30 == 29){
-                 FileWriter csvWriter = null;
-                 try {
-                     csvWriter = new FileWriter("new.csv");
-                     for(int i=0;i<neuronTrainingData.get(0).size();i++) {
-                         for (List a : neuronTrainingData) {
-                             csvWriter.append(a.get(i) + ",");
-                         }
-                         csvWriter.append("\n");
-                     }
-                 } catch (IOException e) {
-                     e.printStackTrace();
-                 }
-
-                 try {
-                     csvWriter.flush();
-                     csvWriter.close();
-
-                 } catch (IOException e) {
-                     e.printStackTrace();
-                 }
-             }
-             iterator++;
-}
-        }
-    });
-
+    private Thread ioThread;
     @Override
     public void initialize(URL location, ResourceBundle resources) {
+
+        currentSpeed = 6;
+        obstacles  = new LinkedBlockingDeque<>();
 
         neuronTrainingData.add(distanceToNextObstacle);
         neuronTrainingData.add(heightOfObstacle);
@@ -106,11 +83,12 @@ public class GameController implements Initializable, Runnable{
         neuronTrainingData.add(velocity);
         neuronTrainingData.add(pterodactylHeight);
         neuronTrainingData.add(state);
-        InputStream stream = this.getClass().getResourceAsStream("/font/PressStart2P-Regular.ttf");
-        font = Font.loadFont(stream, 28.0);
+
+
 
         score = new Score();
         player = new Dinosaur();
+        player.getView().toFront();
         endGame = new Label();
         endGame.setTranslateX(230);
         endGame.setTranslateY(150);
@@ -119,43 +97,122 @@ public class GameController implements Initializable, Runnable{
         gamePane.getChildren().add(player.getView());
         gamePane.getChildren().add(score.getView());
         gamePane.getChildren().add(endGame);
+
         endGame.setVisible(false);
+
+        //replay menu zrobic lepiej
+        menuLabel = new Label("Press M to back to menu");
+        gamePane.getChildren().add(menuLabel);
+        menuLabel.setTranslateY(260);
+        menuLabel.setTranslateX(332);
+        menuLabel.setVisible(false);
+        //---------
+
         replayImageView = new ImageView();
         gamePane.getChildren().add(replayImageView);
+
         replayImageView.setTranslateY(220);
         replayImageView.setTranslateX(332);
         replayImageView.setImage(replayImage);
         replayImageView.setVisible(false);
 
-        obstacle.add(new  CactusSmall());
+        obstacles.add(new CactusSmall());
+        gamePane.getChildren().add(obstacles.getFirst().getView());
         clouds.add(new Cloud());
         gamePane.getChildren().add(clouds.get(0).getView());
-        gamePane.getChildren().add(obstacle.get(0).getView());
-        gamePane.requestFocus();
+
         setSpaceOnKeyPressed();
-        gamePane.setOnKeyReleased((event -> {
-            if(((event.getCode() == KeyCode.DOWN) || (event.getCode() == (KeyCode.S))) && (player.isJumping() == false)){
-            System.out.println("key released");
-            player.notDuck();
-    }
-}));
+
+
 
 //Threads
-        timer = new AnimationTimer() {
+ timer = new AnimationTimer(){
             @Override
             public void handle(long l) {
                 onUpdate();
             }
         };
         timer.start();
-        executorService.scheduleAtFixedRate(this,0,200, TimeUnit.MILLISECONDS);
-        ioThread.setName("Thread for io calculation");
-        ioThread.start();
+
+        switch (MainGameStarter.gameState){
+            case PLAY:
+                break;
+            case TRAIN:
+                executorService = new ScheduledThreadPoolExecutor(2);
+                executorService.scheduleAtFixedRate(this, 0, 200, TimeUnit.MILLISECONDS);
+
+                //ioThread.setName("Thread for io calculation");
+                ioThread = new Thread(() ->{
+                    StringBuilder stringBuilder = new StringBuilder();
+                    file = new File("./" + MainGameStarter.playerName +".csv");
+
+                    file.delete();
+                    try {
+                        file.createNewFile();
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                    }
+
+                    try {
+                        csvWriter = new FileWriter(file);
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                    }
+                    while (true) {
+                        if(!dataReceiver.isEmpty()) {
+                            NodeInput nodeInput = dataReceiver.getData();
+                            //   System.out.println(nodeInput.getDistanceToNextObstacle() +" "+ nodeInput.getHeightOfObstacle() + " "+
+                            //   nodeInput.getWidthOfObstacle() + " " + nodeInput.getPlayerYPosition() + " " +
+                            //   nodeInput.getVelocity() + " " +nodeInput.getPterodactylHeight() + nodeInput.getState() );
+
+                            stringBuilder.append(nodeInput.getDistanceToNextObstacle());
+                            stringBuilder.append(",");
+                            stringBuilder.append(nodeInput.getHeightOfObstacle());
+                            stringBuilder.append(",");
+                            stringBuilder.append(nodeInput.getWidthOfObstacle());
+                            stringBuilder.append(",");
+                            stringBuilder.append(nodeInput.getPlayerYPosition());
+                            stringBuilder.append(",");
+                            stringBuilder.append(nodeInput.getPterodactylHeight());
+                            stringBuilder.append(",");
+                            stringBuilder.append(nodeInput.getVelocity());
+                            stringBuilder.append(",");
+                            stringBuilder.append(nodeInput.getState());
+                            stringBuilder.append("\n");
+                            try {
+                                csvWriter.append(stringBuilder.toString());
+                                stringBuilder.delete(0, stringBuilder.length());
+                                csvWriter.flush();
+                            } catch (IOException e) {
+                                e.printStackTrace();
+                            }
+                        }
+                    }
+                });
+                ioThread.start();
+                break;
+            case SHOW_RESULT:
+                break;
+        }
     }
 
     private void onUpdate(){
+/*
+        switch (MainGameStarter.gameState){
+            case PLAY:
+                break;
+            case TRAIN:
+                break;
+            case SHOW_RESULT:
+                break;
+        }
+        */
 
-        for(Obstacle o: obstacle){
+
+        drawCloud();
+        drawObstacles();
+
+        for(Obstacle o: obstacles){
             o.update();
         }
         for(Cloud cloud: clouds){
@@ -165,105 +222,102 @@ public class GameController implements Initializable, Runnable{
         score.onUpdate(currentSpeed);
         speedUp();
 
-
-
-        if(obstacle.get(0).isAlive()){
-                if(player.isColliding(obstacle.get(0))) {
+        if(obstacles.getFirst().isAlive()){
+                if(player.isColliding(obstacles.getFirst())) {
                     replayImageView.setVisible(true);
                     timer.stop();
-                    executorService.shutdownNow();
-                    ioThread.suspend();
                     score.resetScore();
                     endGame.setVisible(true);
                     player.die();
+
+                    //poprawic
+                    menuLabel.setVisible(true);
+
+
+                    switch (MainGameStarter.gameState){
+                        case PLAY:
+                            break;
+                        case TRAIN:
+
+                            executorService.shutdownNow();
+                            ioThread.suspend();
+
+                            FileChooser fileChooser = new FileChooser();
+                            File dest = fileChooser.showSaveDialog(gamePane.getParent().getScene().getWindow());
+                            fileChooser.getExtensionFilters().addAll(
+                                    new FileChooser.ExtensionFilter("CSV Files", "*.csv"));
+                            if (dest != null) {
+                                try {
+                                    Files.copy(file.toPath(), dest.toPath());
+                                } catch (IOException ex) {
+                                    // handle exception...
+                                }
+                            }
+                            break;
+                        case SHOW_RESULT:
+                            break;
+                        default:
+                            throw new IllegalStateException("Unexpected value: " + MainGameStarter.gameState);
+                    }
                     gamePane.setOnKeyPressed((e) -> {
                         if ((e.getCode() == KeyCode.SPACE)) {
-                            replayImageView.setVisible(false);
-                            for(Obstacle o: obstacle){
-                                gamePane.getChildren().remove(o.getView());
+                            gamePane.getChildren().clear();
+                            //ioThread.resume();
+                           this.initialize(null,null);
                             }
-                            currentSpeed = 6;
-                            obstacle.clear();
-                            obstacle.add(new CactusSmall());
-                            gamePane.getChildren().add(obstacle.get(0).getView());
-                            player.getView().setTranslateY(299.0);
-                            endGame.setVisible(false);
-                            timer.start();
-                            executorService = new ScheduledThreadPoolExecutor(2);
-                            executorService.scheduleAtFixedRate(this, 0, 200, TimeUnit.MILLISECONDS);
-                            ioThread.resume();
-                            setSpaceOnKeyPressed();
-                }});}
-        }else{
-            if(player.isColliding(obstacle.get(1))) {
-                replayImageView.setVisible(true);
-                timer.stop();
-                executorService.shutdownNow();
-                ioThread.suspend();
-                score.resetScore();
-                endGame.setVisible(true);
-                player.die();
-                gamePane.setOnKeyPressed((e) -> {
-                    if ((e.getCode() == KeyCode.SPACE)) {
-                        replayImageView.setVisible(false);
-                        for(Obstacle o: obstacle){
-                            gamePane.getChildren().remove(o.getView());
+                        if ((e.getCode() == KeyCode.M)) {
+                            try {
+                                loadMenu();
+                            } catch (IOException ex) {
+                                ex.printStackTrace();
+                            }
                         }
-                        currentSpeed = 6;
-                        obstacle.clear();
-                        obstacle.add(new CactusSmall());
-                        gamePane.getChildren().add(obstacle.get(0).getView());
-                        player.getView().setTranslateY(299.0);
-                        endGame.setVisible(false);
-                        timer.start();
-                        executorService = new ScheduledThreadPoolExecutor(2);
-                        executorService.scheduleAtFixedRate(this, 0, 200, TimeUnit.MILLISECONDS);
-                        ioThread.resume();
-                        setSpaceOnKeyPressed();
-                    }});}
+                });}}
 
+
+
+        if(obstacles.getFirst().getView().getTranslateX() <= obstacles.getFirst().getWidth() *(-1)){
+            obstacles.getFirst().setAlive(false);
+        }
+        /*
+        if(obstacles.getFirst().getView().getTranslateX()<= -100){
+            obstacles.getFirst().setVisible(false);
         }
 
-        if(obstacle.get(0).getView().getTranslateX()<10){
-            obstacle.get(0).setAlive(false);
-        }
-        if(obstacle.get(0).getView().getTranslateX()<= -100){
-            obstacle.get(0).setVisible(false);
-        }
+         */
 
-        if(!obstacle.get(0).isVisible()){
-            gamePane.getChildren().remove(obstacle.get(0).getView());
-            obstacle.remove(0);
+        if(!obstacles.getFirst().isAlive()){
+            gamePane.getChildren().remove(obstacles.getFirst().getView());
+            obstacles.poll();
         }
         if(!clouds.get(0).isVisible()){
             gamePane.getChildren().remove(clouds.get(0).getView());
             clouds.remove(0);
         }
-        drawCloud();
-        drawObsticle();
-
         if(player.isJumping()) {
             player.jumping();
         }
     }
 
     private void drawCloud() {
-    if(clouds.get(clouds.size()-1).getView().getTranslateX() < 680){
+        if(clouds.isEmpty()){
+            clouds.add(new Cloud());
+            gamePane.getChildren().add(clouds.get(clouds.size()-1).getView());
+        }
+   else if(clouds.get(clouds.size()-1).getView().getTranslateX() < 680){
         if(random.nextInt(100)<1){
             clouds.add(new Cloud());
             gamePane.getChildren().add(clouds.get(clouds.size()-1).getView());
-            gamePane.getChildren().remove(player.getView());
-            gamePane.getChildren().add(player.getView());
         }
-
-
     }
     }
 
     private void speedUp(){
-        currentSpeed += PhysicAbstraction.ACCELERATION;
-        for(Obstacle obstacle: obstacle){
-            obstacle.setVelocity(currentSpeed);
+        if(currentSpeed <= PhysicAbstraction.MAX_SPEED) {
+            currentSpeed += PhysicAbstraction.ACCELERATION;
+            for (Obstacle obstacle : obstacles) {
+                obstacle.setVelocity(currentSpeed);
+            }
         }
     }
 
@@ -273,24 +327,19 @@ public class GameController implements Initializable, Runnable{
         double x;
         double y;
 
-        if(obstacle.get(0).getView().getTranslateX() > 10){
-            x = obstacle.get(0).getView().getTranslateX();
-            y = obstacle.get(0).getView().getTranslateY();
-        }else {
-            x = obstacle.get(1).getView().getTranslateX();
-            y = obstacle.get(1).getView().getTranslateY();
-        }
+            x = obstacles.getFirst().getView().getTranslateX();
+            y = obstacles.getFirst().getView().getTranslateY();
 
         nodeInput.setDistanceToNextObstacle(((x - (player.getView().getTranslateX() + (player.isDucking()?59.0:44.0)))+50)/750);
        // nodeInput.setDistanceBetweenObstacles(obstacle.getView().getTranslateX());
-        nodeInput.setPterodactylHeight(obstacle instanceof Pterodactyl?(1.0/3.0 + 1.0/3.0*(261-y)/25.0):0.00);
-        nodeInput.setHeightOfObstacle(obstacle.get(0).getHeight()/50);
-        nodeInput.setWidthOfObstacle(obstacle.get(0).getWidth()/46);
+        nodeInput.setPterodactylHeight(obstacles.getFirst() instanceof Pterodactyl?(1.0/3.0 + 1.0/3.0*(261-y)/25.0):0.00);
+        nodeInput.setHeightOfObstacle(obstacles.getFirst().getHeight()/50);
+        nodeInput.setWidthOfObstacle(obstacles.getFirst().getWidth()/46);
         nodeInput.setPlayerYPosition((player.getView().getTranslateY()-220)/100);
-        nodeInput.setVelocity((this.currentSpeed-6)/14);
+        nodeInput.setVelocity(this.currentSpeed/13.0);
 
         nodeInput.setState(returnState());
-        dataEmiter.emitData(nodeInput);
+        dataEmitter.emitData(nodeInput);
     }
 
     private State returnState(){
@@ -302,37 +351,38 @@ public class GameController implements Initializable, Runnable{
             return State.SMALL_JUMP;
         }else {return State.RUN;}
     }
-    public void drawObsticle(){
-            if(obstacle.isEmpty() || (!obstacle.get(0).isAlive() && obstacle.size() == 1)){
+    public void drawObstacles(){
+            if(obstacles.isEmpty() || (!obstacles.getFirst().isAlive() && obstacles.size() == 1)){
                     int obstacleNumber = random.nextInt(3);
                     switch (obstacleNumber){
                         case 0:
-                            obstacle.add(new CactusSmall());
+                            obstacles.add(new CactusSmall());
                             break;
                         case 1:
-                            obstacle.add(new CactusBig());
+                            obstacles.add(new CactusBig());
                             break;
                         default:
-                            obstacle.add(new Pterodactyl());
+                            obstacles.add(new Pterodactyl());
                             break;
                     }
-            gamePane.getChildren().add(obstacle.get(obstacle.size()-1).getView());
-        }else if (700-obstacle.get(obstacle.size()-1).getView().getTranslateX() > obstacle.get(obstacle.size()-1).getMinGap()){
+            gamePane.getChildren().add(obstacles.getLast().getView());
+
+        }else if (700- obstacles.getLast().getView().getTranslateX() > obstacles.getLast().getMinGap()){
                 if(random.nextInt(100)<1){
 
                     int obstacleNumber = random.nextInt(3);
                     switch (obstacleNumber){
                         case 0:
-                            obstacle.add(new CactusSmall());
+                            obstacles.add(new CactusSmall());
                             break;
                         case 1:
-                            obstacle.add(new CactusBig());
+                            obstacles.add(new CactusBig());
                             break;
                         default:
-                            obstacle.add(new Pterodactyl());
+                            obstacles.add(new Pterodactyl());
                             break;
                     }
-                    gamePane.getChildren().add(obstacle.get(obstacle.size()-1).getView());
+                    gamePane.getChildren().add(obstacles.getLast().getView());
                 }
 
 
@@ -350,5 +400,17 @@ public class GameController implements Initializable, Runnable{
                 player.setSmallJumping(true);
             }
         });
+        gamePane.setOnKeyReleased((event) -> {
+            if(((event.getCode() == KeyCode.DOWN) || (event.getCode() == (KeyCode.S))) && (player.isJumping() == false)){
+                player.notDuck();
+            }
+        });
+    }
+
+    private void loadMenu() throws IOException {
+        FXMLLoader loader = new FXMLLoader(this.getClass().getResource("/views/MenuView.fxml"));
+        Pane root = loader.load();
+        MainGameStarter.stackPane.getChildren().clear();
+        MainGameStarter.stackPane.getChildren().add(root);
     }
 }
